# x500_description

./: .gitattributes  CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch.py  localization.launch.py  mapper.launch.py  publish_octomap.launch.py  rviz.launch.py
rtab_map_files/: mapfile.bt  rtabmap.db
rviz/: conf.rviz
sitl_mods/models/: oakd.sdf
sitl_mods/worlds/: default.sdf
urdf/: depth_camera.urdf.xacro  x500.urdf.xacro  x500_depth.urdf.xacro
worlds/: sample_world.sdf
