<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>starling2_description</name>
  <version>0.0.0</version>
  <description>URDF description for Starling 2 drone from ModalAI</description>
  <maintainer email="karahul209@gmail.com">rahul</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>launch_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_plugins</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>